--- a/conociendo-elementos/2-container/index.html
+++ b/conociendo-elementos/2-container/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Containers</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <style>
-        div{
-            border: 1px solid black;
-        }
+      div {
+        border: 1px solid black;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Este es un div sin aplicar la clase container de bootstrap</h1>
-    
+
     <div>
-        <h2>Sin clase contenedor</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius mollitia tenetur fugiat eaque, quasi consequuntur ad ducimus enim modi commodi ea reiciendis ex perspiciatis sequi, quod deserunt consequatur iste! Corrupti!</p>
+      <h2>Sin clase contenedor</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius mollitia
+        tenetur fugiat eaque, quasi consequuntur ad ducimus enim modi commodi ea
+        reiciendis ex perspiciatis sequi, quod deserunt consequatur iste!
+        Corrupti!
+      </p>
     </div>
     <div class="container">
-        <h2>con clase contenedor</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae ab ipsam illo soluta in, recusandae sapiente quae modi perferendis velit quas, quos est? Voluptate illo eligendi temporibus nihil reprehenderit?</p>
+      <h2>con clase contenedor</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+        repudiandae ab ipsam illo soluta in, recusandae sapiente quae modi
+        perferendis velit quas, quos est? Voluptate illo eligendi temporibus
+        nihil reprehenderit?
+      </p>
     </div>
-
-</body>
+    <div class="container-xl">
+      <h2>con clase contenedor y ademas tamanio xl</h2>
+      <p>
+        Podemos ver que se comporta como un container cuando el tamanio de
+        pantalla es xl pero si se reduce el tamanio funciona como un container
+        fluid
+      </p>
+    </div>
+    <div class="container-fluid">
+      <h2>con clase contenedor fluido</h2>
+      <p>Toma el tamanio maximo del contenedor padre</p>
+    </div>
+  </body>
 </html>
